fixing some alignment bugs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,3 +84,15 @@ code {
 .mainBody {
     color: black;
 }
+
+.rtl {
+    direction: rtl;
+}
+
+.ltr {
+    direction: ltr;
+}
+
+.w-full {
+    width: 100%;
+}
